# internal/bff-service/model/response/guest.go
@@ -26,6 +26,7 @@ type LogoCustomInfo struct {
 	Tab      CustomTab         `json:"tab"`      // 标签页信息
 	About    CustomAbout       `json:"about"`    // 关于信息
 	LinkList map[string]string `json:"linkList"` // 跳转链接列表,key为链接名称,value为URL
+	Register Register          `json:"register"` // 注册信息
 }
 
 type CustomLogin struct {
@@ -51,6 +52,14 @@ type CustomAbout struct {
 	LogoPath  string `json:"logoPath"` // 关于图标路径
 	Version   string `json:"version"`
 	Copyright string `json:"copyright"` // 版权
+}
+
+type Register struct {
+	Email Email `json:"email"` // 注册邮箱
+}
+
+type Email struct {
+	Status bool `json:"status"`
 }
 
 type LanguageSelect struct {
